scroll mode text overlap fix
git-tfs-id: [https://tfsnpt.int.thomson.com:443/tfs/Cobalt_Collection/]$/Cobalt eBook Builder/Development;C1036639

--- a/ebookStylesheets/css/document.css
+++ b/ebookStylesheets/css/document.css
@@ -12,7 +12,8 @@ a + .no-indent:nth-child(2),
   margin-left: -1em;
 }
 
-.para_text > .no-indent + .t:last-child {
+.para_text > .no-indent + .t:last-child,
+.cite > .no-indent + .t:last-child {
   margin-left: 0;
 }
 
